Fixed icon, spacing, and alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,6 +29,7 @@ body {
 footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
+  text-align: center;
 }
 
 footer p {
